--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,24 @@
   android:layout_height="match_parent"
   tools:context=".MainActivity">
 
-  <android.opengl.GLSurfaceView
-    android:id="@+id/gl_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+   <Button
+       android:id="@+id/btn_single_example"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintRight_toRightOf="parent"
+       app:layout_constraintBottom_toTopOf="@+id/btn_frame_buffer"
+       android:text="Single Example Activity"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"/>
+
+   <Button
+       android:id="@+id/btn_frame_buffer"
+       app:layout_constraintTop_toBottomOf="@id/btn_single_example"
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintRight_toRightOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       android:text="Frame Buffer"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
